--- a/nbs/05-SD-exploration.ipynb
+++ b/nbs/05-SD-exploration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc9abb74",
+   "id": "e39a84e4",
    "metadata": {},
    "source": [
     "This code is based on Stable Diffusion Deep Dive notebook by @johnowhitaker "
@@ -478,7 +478,7 @@
    "id": "392d59af",
    "metadata": {},
    "source": [
-    "#### Image embeddings\n",
+    "### Image embeddings\n",
     "\n",
     "Another interesting point of the `processor` is that it can generate image embeddings as well. Let us look at it."
    ]
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6750806f",
+   "id": "f7e3aaf8",
    "metadata": {},
    "source": [
     "For some reason, vision_model.embeddings and text_model.embeddings are not the directly comparable"
@@ -547,15 +547,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15155233",
+   "id": "d8c1ded2",
    "metadata": {},
    "source": [
-    "#### Comparing Image and Text embeddings"
+    "###  Comparing Image and Text embeddings"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "625054bf",
+   "id": "ece2706f",
    "metadata": {},
    "source": [
     "We need to project these embeddings to the same space to make them comparable"
@@ -563,25 +563,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "6c75abe4",
+   "execution_count": 22,
+   "id": "5fd90774",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(torch.Size([1, 768]), torch.Size([2, 768]))"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/.miniconda3/envs/py39/lib/python3.9/site-packages/transformers/tokenization_utils_base.py:248\u001b[0m, in \u001b[0;36mBatchEncoding.__getattr__\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m    247\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 248\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[43mitem\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m    249\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m:\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'pixel_values'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [22], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m autocast(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcuda\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mno_grad():\n\u001b[0;32m----> 7\u001b[0m         vision_outputs \u001b[38;5;241m=\u001b[39m image_encoder(pixel_values\u001b[38;5;241m=\u001b[39m\u001b[43minputs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpixel_values\u001b[49m\u001b[38;5;241m.\u001b[39mto(torch_device))\n\u001b[1;32m      8\u001b[0m         text_outputs \u001b[38;5;241m=\u001b[39m text_encoder(input_ids\u001b[38;5;241m=\u001b[39minputs\u001b[38;5;241m.\u001b[39minput_ids\u001b[38;5;241m.\u001b[39mto(torch_device))\n\u001b[1;32m      9\u001b[0m         img_embeds \u001b[38;5;241m=\u001b[39m image_projection(vision_outputs[\u001b[38;5;241m1\u001b[39m])\n",
+      "File \u001b[0;32m~/.miniconda3/envs/py39/lib/python3.9/site-packages/transformers/tokenization_utils_base.py:250\u001b[0m, in \u001b[0;36mBatchEncoding.__getattr__\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m    248\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata[item]\n\u001b[1;32m    249\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m:\n\u001b[0;32m--> 250\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: "
+     ]
     }
    ],
    "source": [
     "image_projection = model.visual_projection.to(torch_device)\n",
     "text_projection = model.text_projection.to(torch_device)\n",
     "prompts = [\"\", \"A watercolor painting of an otter\", \"A photograph of an astronaut riding a horse\"]\n",
+    "inputs = processor(text=prompts, imagespadding=\"max_length\", max_length=tokenizer.model_max_length, truncation=True, return_tensors=\"pt\")  \n",
     "with autocast('cuda'):\n",
     "    with torch.no_grad():\n",
     "        vision_outputs = image_encoder(pixel_values=inputs.pixel_values.to(torch_device))\n",
@@ -596,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "871b21a7",
+   "id": "1450dc84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e1ea9999",
+   "id": "23aaf85e",
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +635,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b4273c9",
+   "id": "1f1266c4",
    "metadata": {},
    "source": [
     "The image is more similar to the second prompt: \"A watercolor painting of an otter\".\n",
@@ -637,7 +644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a8acccf",
+   "id": "c22c976b",
    "metadata": {},
    "source": [
     "## Conditioning with Image Embeddings"
@@ -654,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3d41830a",
+   "id": "41f3d584",
    "metadata": {},
    "outputs": [
     {
