--- a/nbs/05-SD-exploration.ipynb
+++ b/nbs/05-SD-exploration.ipynb
@@ -10,11 +10,7 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
    "id": "e39a84e4",
-=======
-   "id": "230adc3a",
->>>>>>> b56fcc5 (fix compare)
    "metadata": {},
    "source": [
     "This code is based on Stable Diffusion Deep Dive notebook by @johnowhitaker "
@@ -515,11 +511,7 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
    "id": "f7e3aaf8",
-=======
-   "id": "4328c360",
->>>>>>> b56fcc5 (fix compare)
    "metadata": {},
    "source": [
     "For some reason, vision_model.embeddings and text_model.embeddings are not the directly comparable"
@@ -555,11 +547,7 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
    "id": "d8c1ded2",
-=======
-   "id": "2c96ab99",
->>>>>>> b56fcc5 (fix compare)
    "metadata": {},
    "source": [
     "###  Comparing Image and Text embeddings"
@@ -567,11 +555,7 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
    "id": "ece2706f",
-=======
-   "id": "bc65b3bb",
->>>>>>> b56fcc5 (fix compare)
    "metadata": {},
    "source": [
     "We need to project these embeddings to the same space to make them comparable"
@@ -579,7 +563,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 22,
    "id": "5fd90774",
    "metadata": {},
@@ -599,32 +582,13 @@
       "File \u001b[0;32m~/.miniconda3/envs/py39/lib/python3.9/site-packages/transformers/tokenization_utils_base.py:250\u001b[0m, in \u001b[0;36mBatchEncoding.__getattr__\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m    248\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata[item]\n\u001b[1;32m    249\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m:\n\u001b[0;32m--> 250\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m\n",
       "\u001b[0;31mAttributeError\u001b[0m: "
      ]
-=======
-   "execution_count": 23,
-   "id": "4364dc40",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(torch.Size([1, 768]), torch.Size([3, 768]))"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
->>>>>>> b56fcc5 (fix compare)
     }
    ],
    "source": [
     "image_projection = model.visual_projection.to(torch_device)\n",
     "text_projection = model.text_projection.to(torch_device)\n",
     "prompts = [\"\", \"A watercolor painting of an otter\", \"A photograph of an astronaut riding a horse\"]\n",
-<<<<<<< HEAD
     "inputs = processor(text=prompts, imagespadding=\"max_length\", max_length=tokenizer.model_max_length, truncation=True, return_tensors=\"pt\")  \n",
-=======
-    "inputs = processor(text=prompts, images = images, padding=\"max_length\", max_length=tokenizer.model_max_length, truncation=True, return_tensors=\"pt\")  \n",
->>>>>>> b56fcc5 (fix compare)
     "with autocast('cuda'):\n",
     "    with torch.no_grad():\n",
     "        vision_outputs = image_encoder(pixel_values=inputs.pixel_values.to(torch_device))\n",
@@ -638,13 +602,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 16,
    "id": "1450dc84",
-=======
-   "execution_count": 24,
-   "id": "152a321f",
->>>>>>> b56fcc5 (fix compare)
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,22 +614,17 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 17,
    "id": "23aaf85e",
-=======
-   "execution_count": 25,
-   "id": "90d6da4e",
->>>>>>> b56fcc5 (fix compare)
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.3257, 0.3914, 0.2829]], device='cuda:0')"
+       "tensor([[0.4542, 0.5458]], device='cuda:0')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,11 +635,7 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
    "id": "1f1266c4",
-=======
-   "id": "6fbaa3fa",
->>>>>>> b56fcc5 (fix compare)
    "metadata": {},
    "source": [
     "The image is more similar to the second prompt: \"A watercolor painting of an otter\".\n",
@@ -694,11 +644,7 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
    "id": "c22c976b",
-=======
-   "id": "1efb8bec",
->>>>>>> b56fcc5 (fix compare)
    "metadata": {},
    "source": [
     "## Conditioning with Image Embeddings"
@@ -715,11 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-<<<<<<< HEAD
    "id": "41f3d584",
-=======
-   "id": "727b32d1",
->>>>>>> b56fcc5 (fix compare)
    "metadata": {},
    "outputs": [
     {
