--- a/nbs/05-SD-exploration.ipynb
+++ b/nbs/05-SD-exploration.ipynb
@@ -563,32 +563,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "5fd90774",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m~/.miniconda3/envs/py39/lib/python3.9/site-packages/transformers/tokenization_utils_base.py:248\u001b[0m, in \u001b[0;36mBatchEncoding.__getattr__\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m    247\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 248\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[43mitem\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m    249\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m:\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'pixel_values'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [22], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m autocast(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcuda\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mno_grad():\n\u001b[0;32m----> 7\u001b[0m         vision_outputs \u001b[38;5;241m=\u001b[39m image_encoder(pixel_values\u001b[38;5;241m=\u001b[39m\u001b[43minputs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpixel_values\u001b[49m\u001b[38;5;241m.\u001b[39mto(torch_device))\n\u001b[1;32m      8\u001b[0m         text_outputs \u001b[38;5;241m=\u001b[39m text_encoder(input_ids\u001b[38;5;241m=\u001b[39minputs\u001b[38;5;241m.\u001b[39minput_ids\u001b[38;5;241m.\u001b[39mto(torch_device))\n\u001b[1;32m      9\u001b[0m         img_embeds \u001b[38;5;241m=\u001b[39m image_projection(vision_outputs[\u001b[38;5;241m1\u001b[39m])\n",
-      "File \u001b[0;32m~/.miniconda3/envs/py39/lib/python3.9/site-packages/transformers/tokenization_utils_base.py:250\u001b[0m, in \u001b[0;36mBatchEncoding.__getattr__\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m    248\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata[item]\n\u001b[1;32m    249\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m:\n\u001b[0;32m--> 250\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: "
-     ]
+     "data": {
+      "text/plain": [
+       "(torch.Size([1, 768]), torch.Size([3, 768]))"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "image_projection = model.visual_projection.to(torch_device)\n",
     "text_projection = model.text_projection.to(torch_device)\n",
     "prompts = [\"\", \"A watercolor painting of an otter\", \"A photograph of an astronaut riding a horse\"]\n",
-    "inputs = processor(text=prompts, imagespadding=\"max_length\", max_length=tokenizer.model_max_length, truncation=True, return_tensors=\"pt\")  \n",
+    "inputs = processor(text=prompts,images = images, padding=\"max_length\", max_length=tokenizer.model_max_length, truncation=True, return_tensors=\"pt\")  \n",
     "with autocast('cuda'):\n",
     "    with torch.no_grad():\n",
     "        vision_outputs = image_encoder(pixel_values=inputs.pixel_values.to(torch_device))\n",
@@ -602,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "1450dc84",
    "metadata": {},
    "outputs": [],
@@ -614,17 +608,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "23aaf85e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.4542, 0.5458]], device='cuda:0')"
+       "tensor([[0.3257, 0.3914, 0.2829]], device='cuda:0')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
