--- a/nbs/05-SD-exploration.ipynb
+++ b/nbs/05-SD-exploration.ipynb
@@ -441,7 +441,7 @@
    "id": "3b2840d2",
    "metadata": {},
    "source": [
-    "but also the `last_hidden_state`, i.e the layer that will produce this embedding. This `layer` is what is added to the `unet`  and conditions the image generation to produce something simillar to the embedding. "
+    "but also the `last_hidden_state`, i.e the layer that will produce these vectors. This `layer` is what is added to the `unet`  and conditions the image generation to produce something simillar to the embedding. "
    ]
   },
   {
@@ -632,8 +632,9 @@
    "id": "1f1266c4",
    "metadata": {},
    "source": [
-    "The image is more similar to the second prompt: \"A watercolor painting of an otter\".\n",
-    "Still, I expected a bigger difference among the prompts probabilities."
+    "The image is more similar to the second prompt: \"A watercolor painting of an otter\", as expected! \n",
+    "\n",
+    "Still, I was looking for a wider difference among the prompts probabilities."
    ]
   },
   {
