changes in textual inversion

--- a/nbs/05-SD-exploration.ipynb
+++ b/nbs/05-SD-exploration.ipynb
@@ -21,6 +21,7 @@
    "id": "e63a8cc4",
    "metadata": {},
    "source": [
+    "#| default_exp sd\n",
     "#| hide\n",
     "## Setup\n",
     "\n",
@@ -44,6 +45,7 @@
    ],
    "source": [
     "#| hide\n",
+    "#|export\n",
     "import torch\n",
     "from torch import autocast\n",
     "from transformers import CLIPModel, CLIPVisionModel, CLIPProcessor\n",
@@ -635,6 +637,38 @@
     "The image is more similar to the second prompt: \"A watercolor painting of an otter\", as expected! \n",
     "\n",
     "Still, I was looking for a wider difference among the prompts probabilities."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcfed2e5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e52a7d58",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d7ec1aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f389f9dd",
+   "metadata": {},
+   "source": [
+    "# WIP bellow"
    ]
   },
   {
